[tool.poetry]
name = "kpmg-data-festival"
version = "0.1.0"
description = ""
authors = ["Simon DALECKY"]
readme = "README.md"
packages = [{include = "kpmg_data_festival"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
